--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -33,8 +32,10 @@ excludes=
 file.reference.AnimateFX-1.2.0.jar=C:\\Users\\Jauzy\\Downloads\\Compressed\\AnimateFX-1.2.0.jar
 file.reference.controlsfx-8.40.15.jar=E:\\TEMP\\BACKUP 28-10-2019\\Downloads\\controlsfx-8.40.15.jar
 file.reference.fontawesomefx-8.1.jar=E:\\TEMP\\BACKUP 28-10-2019\\Downloads\\fontawesomefx-8.1.jar
-file.reference.GMapsFX-2.10.0.jar=C:\\Users\\Jauzy\\Downloads\\Compressed\\GMapsFX-2.10.0.jar
+file.reference.GMapsFX-2.12.0.jar=C:\\Users\\Jauzy\\Downloads\\Compressed\\GMapsFX-2.12.0.jar
 file.reference.jfoenix-8.0.8.jar=E:\\TEMP\\Dokumen\\NetBeansProjects\\AnimatedLogin\\dist\\lib\\jfoenix-8.0.8.jar
+file.reference.slf4j-api-1.7.2.jar=C:\\Users\\Jauzy\\Downloads\\Compressed\\slf4j-api-1.7.2.jar
+file.reference.slf4j-jdk14-1.7.2.jar=C:\\Users\\Jauzy\\Downloads\\Compressed\\slf4j-jdk14-1.7.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -46,10 +47,13 @@ javac.classpath=\
     ${file.reference.fontawesomefx-8.1.jar}:\
     ${file.reference.AnimateFX-1.2.0.jar}:\
     ${file.reference.jfoenix-8.0.8.jar}:\
-    ${file.reference.GMapsFX-2.10.0.jar}
+    ${file.reference.slf4j-api-1.7.2.jar}:\
+    ${file.reference.slf4j-jdk14-1.7.2.jar}:\
+    ${file.reference.GMapsFX-2.12.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -111,6 +115,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
